# ros_example

./: .gitignore  README.md  setup.bash  setup.zsh
src/gazebo/launch/: .LMSSimulator.launch.swp  empty_world.launch  simulation.launch
src/gazebo/models/magnetic_box/: model.config  model.sdf
src/gazebo/models/magnetic_sphere/: model.config  model.sdf
src/gazebo/models/sphere/: model.config  model.sdf
src/gazebo/world/: simulation.world
src/model_plugin/: CMakeLists.txt  package.xml
src/model_plugin/include/: MagneticBox.hh  MagneticSphere.hh
src/model_plugin/src/: MagneticBox.cc  MagneticSphere.cc
src/ros_msgs/: CMakeLists.txt  cli.py  package.xml
src/ros_msgs/include/: ROS.hh
src/ros_msgs/include/msg/: RemoteSignal.hh
src/ros_msgs/include/srv/: UpdateMagnetPair.hh
src/ros_msgs/srv/: Attach.srv  Detach.srv
src/world_plugin/: CMakeLists.txt  package.xml
src/world_plugin/include/: Carrier.hh  Elevator.hh  SimulationWorld.hh
src/world_plugin/src/: SimulationWorld.cc
