<?xml version="1.0"?>
<package format="2">
  <name>ros_msgs</name>
  <version>0.0.0</version>
  <description>The ros_msgs package</description>

  <maintainer email="mkro0616@gmail.com">mk</maintainer>

  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
